--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mui/material": "^6.4.8",
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/styled-components": "^5.1.34",
     "typescript": "^5"
   }
 }
